--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "next": "13.4.12",
     "postcss": "8.4.31",
     "react": "18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-quill": "^2.0.0",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
